--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     
       <div class="row flex-row-reverse flex-md-row mt-5 pt-5">
         <div class="col-9 col-md-5 text-md-end">
-          <h5>1995-2008</h5>
+          <h5>2014-2017</h5>
           <h5>Early Passion for Technology</h5>
           <p>From an early age, I became fascinated with computers and programming. Starting with basic HTML and CSS, I gradually expanded my skills to include JavaScript and various frameworks.</p>
         </div>
@@ -164,15 +164,15 @@
           <img class="rounded-circle border border-5 border-dark-subtle img-fluid" src="images/about-img-2.jpg" alt="img">
         </div>
         <div class="col-9 col-md-5">
-          <h5>2008-2014</h5>
+          <h5>2018-2023</h5>
           <h5>Higher Education and Career Growth</h5>
-          <p>During my university years, I studied computer science and gained hands-on experience through internships and freelance projects. This period fueled my passion for creating innovative solutions and solving complex problems.</p>
+          <p>During my university years, I studied Information Technology and gained hands-on experience through internships and freelance projects. This period fueled my passion for creating innovative solutions and solving complex problems.</p>
         </div>
       </div>
     
       <div class="row flex-row-reverse flex-md-row mt-5 pt-5">
         <div class="col-9 col-md-5 text-md-end">
-          <h5>2014-Present</h5>
+          <h5>2023-Present</h5>
           <h5>Professional Excellence and Continuous Learning</h5>
           <p>Throughout my career, I have consistently sought opportunities to refine my skills and stay updated with the latest technologies. I strive for excellence in every project I undertake and aim to deliver valuable and impactful results.</p>
         </div>
